fix: centered avatar on small screens

--- a/s/style.css
+++ b/s/style.css
@@ -107,6 +107,7 @@
 	.plate {
 		display: flex;
 		flex-wrap: wrap;
+		justify-content: center;
 		width: max-content;
 		max-width: 100%;
 
